# checkpoint-explorer

./: .gitignore  Cargo.toml  README.md  demo.tape  gen_demo.py  record_demo.py
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: check.rs  codec.rs  config.rs  diff.rs  filetree.rs  filter.rs  gguf.rs  hdf5.rs  hdf5_lz4.rs  health.rs  kernel.rs  lib.rs  model.rs  readers.rs  remote.rs  rename.rs  safelayout.rs  sample.rs  sftp.rs  stats.rs  stheader.rs  tree.rs  viewstate.rs
examples/: gen_hdf5_fixture.rs  h5layout.rs
src/: check.rs  codec.rs  config.rs  convert.rs  diff.rs  explorer.rs  filetree.rs  hdf5.rs  hdf5_lz4.rs  hdf5_zstd.rs  health.rs  img.rs  main.rs  npy.rs  plain.rs  progress.rs  remote.rs  rename.rs  s3.rs  safelayout.rs  sample.rs  sftp.rs  stats.rs  stheader.rs  tree.rs  tui.rs  ui.rs  utils.rs
src/web/: assets.rs  dto.rs  handlers.rs  mod.rs
tests/: cli.rs
tests/fixtures/: tiny.hdf5
tests/snapshots/: cli__check_healthy_fixture.snap  cli__check_json_healthy.snap  cli__check_sarif_healthy.snap  cli__diff_lists_changes_and_exits_1.snap  cli__diff_tensor_values_differ_and_exits_1.snap  cli__files_view.snap  cli__hdf5__detail_compressed_f16.snap  cli__hdf5__detail_compute_stats.snap  cli__hdf5__detail_down_proj_uniform_schema.snap  cli__hdf5__detail_gate_up_nonuniform_schema.snap  cli__hdf5__detail_histogram.snap  cli__hdf5__detail_per_tensor_schema.snap  cli__hdf5__emit_commands.snap  cli__hdf5__heatmap.snap  cli__hdf5__legend_detail.snap  cli__hdf5__legend_tree.snap  cli__hdf5__legend_values.snap  cli__hdf5__stats_popup.snap  cli__hdf5__tree.snap  cli__hdf5__tree_collapsed.snap  cli__hdf5__tree_expanded.snap  cli__hdf5__tree_search.snap  cli__hdf5__values_edges.snap  cli__hdf5__values_overview.snap  cli__layout_view.snap  cli__plain_detail_f16.snap  cli__plain_detail_u16.snap  cli__plain_histogram_u16.snap  cli__plain_request_errors.snap  cli__plain_tree.snap  cli__plain_tree_expanded.snap  cli__plain_tree_writable.snap  cli__plain_values_u16.snap  cli__print_tensors_json.snap  cli__print_tensors_json_verbose.snap  cli__print_tensors_name_exclude.snap  cli__print_tensors_text.snap  cli__print_tensors_text_verbose.snap  cli__print_tree_json.snap  cli__print_tree_json_verbose.snap  (+7 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: DataView.svelte  Detail.svelte  Dtype.svelte  FileBrowser.svelte  FilePreview.svelte  Footer.svelte  HealthView.svelte  Heatmap.svelte  HistogramView.svelte  JsonView.svelte  LayoutView.svelte  Palette.svelte  Shape.svelte  Spinner.svelte  StatsView.svelte  StatusBar.svelte  TensorDataPanel.svelte  TensorStats.svelte  TreeScreen.svelte  TreeView.svelte  ValueGrid.svelte  VaultBoy.svelte
web/src/lib/: api.ts  clipboard.ts  color.ts  dtype.ts  flatten.ts  format.ts  search.ts  types.ts
web/src/stores/: server.ts  theme.ts  view.ts
