[package]
name = "safetensors_explorer"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/EricLBuehler/safetensors_explorer"
license = "MIT"
authors = ["Eric Buehler"]
description = "CLI utility to inspect and explore .safetensors and .gguf files"

[dependencies]
safetensors = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.28"
serde_json = "1.0"
glob = "0.3"
fuzzy-matcher = "0.3"
# Optional: read Cerebras-style HDF5 checkpoints. Off by default so the
# default build stays pure-Rust with no system dependencies; the `static`
# feature builds a bundled libhdf5 from source (needs a C toolchain + cmake).
hdf5-metno = { version = "0.12", optional = true, features = ["static", "zlib", "f16"] }

[features]
hdf5 = ["dep:hdf5-metno"]
