[package]
name = "checkpoint-explorer"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/antont-cerebras/checkpoint-explorer"
license = "MIT"
authors = ["Eric Buehler"]
description = "CLI utility to inspect and explore .safetensors, .gguf and HDF5 checkpoint files"

[dependencies]
safetensors = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.28"
serde_json = "1.0"
glob = "0.3"
fuzzy-matcher = "0.3"
# Zero-copy reads (mmap) + parallel scans for whole-tensor statistics.
memmap2 = "0.9"
rayon = "1"
# Read NumPy `.npz` archives (a ZIP of `.npy` entries). Pure-Rust: the `deflate`
# feature is backed by flate2's miniz_oxide backend, so the default build stays
# free of system dependencies. `.npy` itself needs no ZIP support.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Optional: read Cerebras-style HDF5 checkpoints. Off by default so the
# default build stays pure-Rust with no system dependencies; the `static`
# feature builds a bundled libhdf5 from source (needs a C toolchain + cmake).
hdf5-metno = { version = "0.12", optional = true, features = ["static", "zlib", "f16"] }
# Used only by the HDF5 stats reader (hyperslab streaming); version pinned to
# match hdf5-metno's so the `Array`/selection types line up.
ndarray = { version = "0.17", optional = true }
# FFI to the bundled libhdf5 (re-exports its `h5z`/`h5` symbols) so we can
# register the LZ4 decompression filter it lacks; pinned to hdf5-metno's -sys.
hdf5-metno-sys = { version = "0.11", optional = true }
# Pure-Rust LZ4 block decompression backing that filter (decode only).
lz4_flex = { version = "0.11", optional = true, default-features = false, features = ["safe-decode"] }
# `f16` reads use `half::f16` (the type hdf5-metno's `f16` feature implements
# `H5Type` for); needed to read 16-bit-float datasets without lossy conversion.
half = { version = "2", optional = true }
# Zstandard codec for the repack command (registered as an in-process HDF5
# filter, id 32015); decode-compatible with h5py + hdf5plugin's zstd.
zstd = { version = "0.13", optional = true }
colored_json = "5.0.0"
yansi = "1.0.1"
ratatui = "0.29"
unicode-width = "=0.2.0"
ansi-to-tui = "7.0.0"
ssh2 = { version = "0.9.6", features = ["vendored-openssl"] }
rpassword = "7.5.4"

# Unix only: flush the tty input buffer on exit (discard mouse-wheel reports
# still queued when quitting mid-scroll) so the shell doesn't echo them as
# garbage. crossterm already pulls libc in transitively.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Cram-like end-to-end CLI tests: run the binary in `--plain` and snapshot the
# rendered screen. Golden files live in tests/snapshots/ and are regenerated with
# `cargo insta review` (or `INSTA_UPDATE=always cargo test`).
insta = { version = "1", features = ["filters"] }
# Normalize the scan-duration in the `y` round-trip comparison (which checks raw
# renders, not snapshots).
regex = "1"

[features]
hdf5 = ["dep:hdf5-metno", "dep:ndarray", "dep:hdf5-metno-sys", "dep:lz4_flex", "dep:half", "dep:zstd"]

# Diagnostic: dump dataset shape/chunk/filter layout of an HDF5 file.
[[example]]
name = "h5layout"
required-features = ["hdf5"]

# Regenerate the committed HDF5 end-to-end test fixture (tests/fixtures/tiny.hdf5).
[[example]]
name = "gen_hdf5_fixture"
required-features = ["hdf5"]
